# minimal-high-fidelity-music-player

./: .gitignore  README.md  TAURI_SETUP.md  next.config.ts  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/app/: globals.css  page.tsx
src/components/: MusicPlayer.tsx
